--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,8 @@ base/media/
 base/accounts/migrations/
 # C extensions
 *.so
-
+base/accounts/migrations/
+base/offers/migrations/
 # Distribution / packaging
 .Python
 build/
