Feature | Application model | This model allows user to apply for a job offert It has fields like: first and last name, email, phone number, message and a lot more

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ base/accounts/migrations/
 base/offers/migrations/
 # Distribution / packaging
 .Python
+base/base/migrations/
 build/
 develop-eggs/
 dist/
